<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.pigagent</groupId>
    <artifactId>pig-agent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Pig Agent</name>
    <description>A terminal-based AI agent framework built on AgentScope Java</description>
    <url>https://github.com/xiangganLuo/pig-agent</url>

    <licenses>
        <license>
            <name>Apache Software License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>ls</name>
            <email>xiangganluo@gmail.com</email>
            <organization>ls</organization>
            <roles>
                <role>author</role>
            </roles>
        </developer>
    </developers>

    <issueManagement>
        <system>Github Issue</system>
        <url>https://github.com/xiangganLuo/pig-agent/issues</url>
    </issueManagement>

    <scm>
        <connection>scm:https://github.com/xiangganLuo/pig-agent</connection>
        <developerConnection>scm:git@github.com:xiangganLuo/pig-agent.git</developerConnection>
        <url>https://github.com/xiangganLuo/pig-agent</url>
    </scm>

    <modules>
        <module>pig-agent-core</module>
        <module>pig-agent-providers</module>
        <module>pig-agent-tools</module>
        <module>pig-agent-workspace</module>
        <module>pig-agent-task</module>
        <module>pig-agent-channel</module>
        <module>pig-agent-config</module>
        <module>pig-agent-onboarding</module>
        <module>pig-agent-mcp</module>
        <module>pig-agent-cli</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Core dependencies -->
        <agentscope.version>1.0.10</agentscope.version>
        <jline.version>3.28.0</jline.version>
        <picocli.version>4.7.6</picocli.version>
        <snakeyaml.version>2.3</snakeyaml.version>
        <jackson.version>2.18.3</jackson.version>
        <lucene.version>9.12.0</lucene.version>

        <!-- Test -->
        <junit.version>5.11.4</junit.version>
        <mockito.version>5.15.2</mockito.version>
        <assertj.version>3.27.3</assertj.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- AgentScope Java (all-in-one) -->
            <dependency>
                <groupId>io.agentscope</groupId>
                <artifactId>agentscope</artifactId>
                <version>${agentscope.version}</version>
            </dependency>

            <!-- Internal modules -->
            <dependency>
                <groupId>io.pigagent</groupId>
                <artifactId>pig-agent-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.pigagent</groupId>
                <artifactId>pig-agent-providers</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.pigagent</groupId>
                <artifactId>pig-agent-tools</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.pigagent</groupId>
                <artifactId>pig-agent-workspace</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.pigagent</groupId>
                <artifactId>pig-agent-task</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.pigagent</groupId>
                <artifactId>pig-agent-channel</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.pigagent</groupId>
                <artifactId>pig-agent-config</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.pigagent</groupId>
                <artifactId>pig-agent-onboarding</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.pigagent</groupId>
                <artifactId>pig-agent-mcp</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- JLine3 for terminal REPL -->
            <dependency>
                <groupId>org.jline</groupId>
                <artifactId>jline</artifactId>
                <version>${jline.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jline</groupId>
                <artifactId>jline-terminal-jna</artifactId>
                <version>${jline.version}</version>
            </dependency>

            <!-- Picocli for CLI parsing -->
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>${picocli.version}</version>
            </dependency>

            <!-- SnakeYAML for config -->
            <dependency>
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>${snakeyaml.version}</version>
            </dependency>

            <!-- Jackson for JSON -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.dataformat</groupId>
                <artifactId>jackson-dataformat-yaml</artifactId>
                <version>${jackson.version}</version>
            </dependency>

            <!-- Lucene for tool discovery -->
            <dependency>
                <groupId>org.apache.lucene</groupId>
                <artifactId>lucene-core</artifactId>
                <version>${lucene.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.lucene</groupId>
                <artifactId>lucene-queryparser</artifactId>
                <version>${lucene.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Common test dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
            </plugin>
        </plugins>
    </build>
</project>
